# yavdr-pulse-dbusctl

./: README.md  pyproject.toml
contrib/: org.yavdr.yavdr-dbus-pulsectl.conf
debian/: changelog  control  copyright  install  rules  yavdr-pulse-dbusctl.dbus-pulsectl.user.service
debian/source/: options
yavdr_pulse_dbusctl/: __init__.py  __main__.py  main.py
