[project]
name = "yavdr-pulse-dbusctl"
description = "control pulseaudio in a session via a dbus interface on the system bus"
authors = [{"name" = "Alexander Grothe", "email" = "seahawk1986@gmx.de"}]
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "pulsectl",
    "sdbus",
]

[project.scripts]
yavdr-pulse-dbusctl = "yavdr_pulse_dbusctl:run_main"

[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["yavdr_pulse_dbusctl*"]

[tool.setuptools.dynamic]
version = {attr = "yavdr_pulse_dbusctl.__version__"}